# SchaeferGL

./: CMakeLists.txt  README.md
SchaeferGL-Library/: BufferManager.cpp  CMakeLists.txt  SchaeferGL-Library.cpp  Utilities.h  dllmain.cpp
SchaeferGL-Tests/: CMakeLists.txt
cmake/Modules/: FindDirectX.cmake
